@@ -1,9 +1,8 @@
 package com.example.g2gcalculator.service;
 
-import com.example.g2gcalculator.dto.PriceResponse;
 import com.example.g2gcalculator.dto.RealmResponse;
+import com.example.g2gcalculator.error.NotFoundException;
 import com.example.g2gcalculator.mapper.RealmMapper;
-import com.example.g2gcalculator.model.GameVersion;
 import com.example.g2gcalculator.model.Realm;
 import com.example.g2gcalculator.repository.ClassicRealmRepository;
 import com.example.g2gcalculator.service.impl.ClassicRealmService;
@@ -12,19 +11,24 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
-import java.math.BigDecimal;
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
+import static com.example.g2gcalculator.util.TestUtil.*;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class ClassicRealmServiceTest {
     @Mock
-    private ClassicRealmRepository ClassicRealmRepository;
+    private ClassicRealmRepository classicRealmRepository;
     @Mock
     private RealmMapper realmMapper;
     @InjectMocks
@@ -32,42 +36,43 @@ class ClassicRealmServiceTest {
 
 
     @Test
-    void getAllRealms_shouldWork() {
-        RealmResponse mockRealmResponse = new RealmResponse(1, "Everlook", new PriceResponse(BigDecimal.valueOf(0.5)),
-                GameVersion.CLASSIC.name(), Collections.emptyList());
+    void getAllRealms_returnsRealmResponseList() {
+        List<RealmResponse> expectedResponse =  List.of(createRealmResponse(1), createRealmResponse(2));
+        Page<Realm> mockRealmPage = new PageImpl<>(List.of(createRealm(1), createRealm(2)));
 
+        when(classicRealmRepository.findAll(any(Pageable.class))).thenReturn(mockRealmPage);
+        when(realmMapper.toRealmResponse(mockRealmPage.getContent().get(0))).thenReturn(expectedResponse.get(0));
+        when(realmMapper.toRealmResponse(mockRealmPage.getContent().get(1))).thenReturn(expectedResponse.get(1));
 
-        when(realmMapper.toRealmResponse(any(Realm.class))).thenReturn(mockRealmResponse);
-        List<Realm> mockResult = List.of(Realm.builder().id(1).name("Everlook").build());
-
-        when(ClassicRealmRepository.findAllFetch()).thenReturn(mockResult);
-
-        List<RealmResponse> result = realmService.getAllRealms();
+        List<RealmResponse> result = realmService.getAllRealms(PageRequest.of(0, 10));
 
         assertThat(result).isNotNull();
-        assertThat(result.size()).isEqualTo(1);
-        assertThat(result).isEqualTo(List.of(mockRealmResponse));
+        assertThat(result.size()).isEqualTo(expectedResponse.size());
+        assertThat(result).isEqualTo(expectedResponse);
     }
 
     @Test
-    void getAllRealms_callsRepo() {
-        realmService.getAllRealms();
+    void getRealm_returnsCorrectRealmResponse() {
+        RealmResponse mockRealmResponse = createRealmResponse(1);
+        Realm realm = createRealm(1);
 
-        verify(ClassicRealmRepository).findAllFetch();
-        verifyNoMoreInteractions(ClassicRealmRepository);
+
+        when(realmMapper.toRealmResponse(realm)).thenReturn(mockRealmResponse);
+        when(classicRealmRepository.findByNameAndFaction(realm.getName(), realm.getFaction())).thenReturn(Optional.of(realm));
+
+        RealmResponse result = realmService.getRealm(getFullRealmName(realm));
+
+        assertThat(result).isNotNull();
+        assertThat(result).isEqualTo(mockRealmResponse);
     }
 
     @Test
-    void getAllRealms_callsMapper() {
-        RealmResponse mockRealmResponse = new RealmResponse(1, "Everlook", new PriceResponse(BigDecimal.valueOf(0.5)), GameVersion.CLASSIC.name(),
-                Collections.emptyList());
-        List<Realm> mockResult = List.of(Realm.builder().id(1).name("Everlook").build());
+    void getRealm_whenRealmNotFound_throwsNotFound() {
+        Realm realm = createRealm(1);
+        when(classicRealmRepository.findByNameAndFaction(realm.getName(), realm.getFaction())).thenReturn(Optional.empty());
+        assertThatThrownBy(() -> realmService.getRealm(getFullRealmName(realm)))
+                .isInstanceOf(NotFoundException.class)
+                .hasMessage("No realm found for name: " + realm.getName() + " and faction: " + realm.getFaction());
 
-        when(ClassicRealmRepository.findAllFetch()).thenReturn(mockResult);
-        when(realmMapper.toRealmResponse(any(Realm.class))).thenReturn(mockRealmResponse);
-        realmService.getAllRealms();
-
-        verify(realmMapper, times(mockResult.size())).toRealmResponse(any(Realm.class));
-        verifyNoMoreInteractions(realmMapper);
     }
 }
